# geenie

./: .gitignore  Cargo.toml
geenie/: Cargo.toml
geenie/examples/: geenie.rs
geenie/src/: cli.rs  command.rs  context.rs  error.rs  file.rs  func.rs  geenie.rs  item.rs  lib.rs  process.rs  question.rs  questions.rs  result.rs
geenie/src/machine/: backend.rs  mod.rs  question.rs  questions.rs
