[package]
name = "geenie"
version = "0.1.0"
edition = "2021"

[features]
# default = ["fs", "cli", "process"]
cli = ["cliclack", "blocking", "spurgt-cliclack"]
fs = ["async-fs", "futures"]
process = ["async-process"]

[dependencies]
relative-path = "2"
thiserror = "2"

spurgt = { git = "ssh://git@github.com/fairy-render/spurgt.git" }
spurgt-cliclack = { git = "ssh://git@github.com/fairy-render/spurgt.git", optional = true }

async-process = { version = "2", optional = true }
cliclack = { version = "0.3", optional = true }
blocking = { version = "1", optional = true }
async-fs = { version = "2", optional = true }
futures = { version = "0.3", optional = true }

[dev-dependencies]
ctrlc = { version = "3" }


[[example]]
name = "geenie"
path = "examples/geenie.rs"
required-features = ["fs", "cli", "process"]
